[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0167

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Raycasts" type="Node2D" parent="."]

[node name="RayCastSouth" type="RayCast2D" parent="Raycasts"]
scale = Vector2( 1, 0.7 )
enabled = true

[node name="RayCastNorth" type="RayCast2D" parent="Raycasts"]
rotation = 3.14159
scale = Vector2( 1, 0.7 )
enabled = true

[node name="RayCastWest" type="RayCast2D" parent="Raycasts"]
rotation = 1.5708
scale = Vector2( 1, 0.7 )
enabled = true

[node name="RayCastEast" type="RayCast2D" parent="Raycasts"]
rotation = 4.71239
scale = Vector2( 1, 0.7 )
enabled = true

[node name="BoostTimer" type="Timer" parent="."]

[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]
